--- a/Wray_Tracker/Views/Home/Dashboard.cshtml
+++ b/Wray_Tracker/Views/Home/Dashboard.cshtml
@@ -11,7 +11,7 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1 class="m-0 text-dark">My Dashboard</h1>
+                <h3 class="m-0 text-gray">Logged in as: @Model.RoleNames</h3>
             </div><!-- /.col -->
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
@@ -104,7 +104,7 @@
                 <div class="col-md-12">
                     <div class="card">
                         <div class="mx-lg-2 mt-lg-n2 elevation-2 bg-gradient-orange text-white">
-                            <h5 class="card-header">All Projects</h5>
+                            <h4 class="card-header">All Projects</h4>
                             @*<div class="card-tools">
                                 <button type="button" class="btn btn-tool" data-card-widget="collapse">
                                     <i class="fas fa-minus"></i>
@@ -152,15 +152,8 @@
                 <div class="col-md-8">
                     <!-- PIE CHART -->
                     <div class="card card-danger">
-                        <div class="card-header">
-                            <h3 class="card-title">Pie Chart</h3>
-
-                            <div class="card-tools">
-                                <button type="button" class="btn btn-tool" data-card-widget="collapse">
-                                    <i class="fas fa-minus"></i>
-                                </button>
-                                <button type="button" class="btn btn-tool" data-card-widget="remove"><i class="fas fa-times"></i></button>
-                            </div>
+                        <div class="mx-lg-2 mt-lg-n2 elevation-2 bg-gradient-orange text-white">
+                            <h4 class="card-header">Pie Chart</h4>
                         </div>
                         <div class="card-body">
                             <canvas id="pieChart" style="min-height: 250px; height: 250px; max-height: 250px; max-width: 100%;"></canvas>
@@ -763,25 +756,16 @@
 
     // My Projects
     <!-- Everyone will need to have access to data tables -->
-    <!-- TABLE: LATEST ORDERS -->
+    <!-- TABLE: PROJECTS -->
     <div class="container-fluid">
         <div class="card">
-            <div class="card-header border-transparent">
-                <h2 class="card-title">My Projects</h2>
-
-                <div class="card-tools">
-                    <button type="button" class="btn btn-tool" data-card-widget="collapse">
-                        <i class="fas fa-minus"></i>
-                    </button>
-                    <button type="button" class="btn btn-tool" data-card-widget="remove">
-                        <i class="fas fa-times"></i>
-                    </button>
-                </div>
+            <div class="mx-lg-2 mt-lg-n2 elevation-2 bg-gradient-orange text-white">
+                <h4 class="card-header">My Projects</h4>
             </div>
             <!-- /.card-header -->
-            <div class="card-body p-0">
+            <div class="card-body">
                 <div class="table-responsive">
-                    <table class="table table-striped table-bordered">
+                    <table class="table">
                         <thead>
                             <tr>
                                 <th>
@@ -868,24 +852,15 @@
         <!-- /.card -->
         <!-- My Tickets -->
         <!-- Everyone will need to have access to data tables -->
-        <!-- TABLE: LATEST ORDERS -->
+        <!-- TABLE: TICKETS -->
         <div class="card">
-            <div class="card-header border-transparent">
-                <h2 class="card-title">My Tickets</h2>
-
-                <div class="card-tools">
-                    <button type="button" class="btn btn-tool" data-card-widget="collapse">
-                        <i class="fas fa-minus"></i>
-                    </button>
-                    <button type="button" class="btn btn-tool" data-card-widget="remove">
-                        <i class="fas fa-times"></i>
-                    </button>
-                </div>
+            <div class="mx-lg-2 mt-lg-n2 elevation-2 bg-gradient-navy text-white">
+                <h4 class="card-header">My Tickets</h4>
             </div>
             <!-- /.card-header -->
-            <div class="card-body p-0">
-                <div class="table-responsive">
-                    <table class="table table-striped table-bordered">
+            <div class="card-body">
+                <div class="table">
+                    <table class="table">
                         <thead>
                             <tr>
                                 <th>
