--- a/Wray_Tracker/Views/Shared/_Layout.cshtml
+++ b/Wray_Tracker/Views/Shared/_Layout.cshtml
@@ -31,21 +31,18 @@
 <body class="hold-transition sidebar-mini layout-fixed layout-sm-navbar-fixed layout-sm-footer-not-fixed">
     <div class="wrapper">
         <!-- Navbar -->
-        <nav class="main-header navbar navbar-expand-sm navbar-white navbar-light elevation-3">
+        <nav class="main-header navbar navbar-expand navbar-white navbar-light elevation-3">
             <!-- Left navbar links -->
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    @if (User.Identity.IsAuthenticated)
-                    {
-                        <span>Logged in as: @Model.RoleName</span>
-                    }
+                    <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
                 </li>
                 <li class="nav-item d-none d-sm-inline-block">
                     <a href="@Url.Action("Dashboard", "Home")" class="nav-link">Home</a>
                 </li>
-                @*<li class="nav-item d-none d-sm-inline-block">
-                        <a href="#" class="nav-link" style="color: #fff;">About</a>
-                    </li>*@
+                <li class="nav-item d-none d-sm-inline-block">
+                    <a href="#" class="nav-link">About</a>
+                </li>
             </ul>
 
             <!-- SEARCH FORM -->
