updates to files
bug fixes, adding more functionality to projects and tickets , adding in chart functionality

--- a/Wray_Tracker/Views/Account/ForgotPassword.cshtml
+++ b/Wray_Tracker/Views/Account/ForgotPassword.cshtml
@@ -29,13 +29,13 @@
 <body class="hold-transition login-page">
     <div class="login-box">
         <div class="login-logo">
-            <b>Dragon</b>Fly
+            <img src="~/Images/onlinelogomaker-052320-1539-8719.png" width="360" />
         </div>
         <!-- /.login-logo -->
         <div class="card">
-            <div class="card-body login-card-body">
+            <div class="login-card-body">
                 <p class="login-box-msg">You forgot your password? Here you can easily retrieve a new password.</p>
-                @using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "card"}))
+                @using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "card-body"}))
                 {
                     @Html.AntiForgeryToken()
                     @Html.ValidationSummary("", new { @class = "text-danger" })
@@ -50,14 +50,14 @@
                     </div>
                     <div class="row">
                         <div class="col-12">
-                            <button type="submit" class="btn btn-primary btn-block">Request new password</button>
+                            <button type="submit" class="btn bg-gradient-orange text-white btn-block">Request new password</button>
                         </div>
                         <!-- /.col -->
                     </div>
                 }
 
                 <p class="mt-3 mb-1">
-                    <a href="@Url.Action("Index", "Home")">Login</a>
+                    <a href="@Url.Action("Login", "Account")">Login</a>
                 </p>
                 <p class="mb-0">
                     <a href="@Url.Action("Register", "Account")" class="text-center">Register a new membership</a>
