--- a/Wray_Tracker/Views/Projects/Create.cshtml
+++ b/Wray_Tracker/Views/Projects/Create.cshtml
@@ -7,9 +7,11 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm("Create", "Projects", FormMethod.Post, null))
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
+    @Html.HiddenFor(model => model.Id)
+    
     
     
     <div class="form-horizontal">
@@ -70,7 +72,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn bg-gradient-navy" />
             </div>
         </div>
     </div>
