--- a/Wray_Tracker/Views/Projects/Index.cshtml
+++ b/Wray_Tracker/Views/Projects/Index.cshtml
@@ -1,94 +1,130 @@
 ﻿@using Wray_Tracker.Models
 @model IEnumerable<Project>
 
-@{
-    ViewBag.Title = "Projects";
-}
-
-<h2>@ViewBag.Title</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-
-<table class="table table-striped table-bordered">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
-                @Html.DisplayName("Project Manager")
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Created)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Updated)
-            </th>
-            @*<th>
-                @Html.DisplayNameFor(model => model.IsArchived)
-            </th>*@
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @{
-            var db = new ApplicationDbContext();
-        }
-
-        @foreach (var item in Model)
+<section class="content">
+    <div class="container">
+        @if (User.IsInRole("Admin") || User.IsInRole("Manager"))
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Description)
-                </td>
-                <td>
-                    @{
-                        var pm = db.Users.Find(item.ManagerId);
-                        var pmName = pm != null ? pm.FullName : "Unassigned";
-                    }
-
-                    @pmName
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Created)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Updated)
-                </td>
-                @*<td>
-                    @Html.DisplayFor(modelItem => item.IsArchived)
-                </td>*@
-            <td>
-                @if (User.IsInRole("Admin") || User.IsInRole("Manager"))
-                {
-                    @*@Html.ActionLink("Manage Members |", "ManageProjectAssignments", new { id = item.Id })*@
-
-                    @Html.ActionLink("Assign Users |", "AssignUsers", new { projectId = item.Id })
-
-                    @Html.ActionLink(" Edit |", "Edit", new { id = item.Id })
-
-                    @Html.ActionLink(" Project Details", "ProjectDetails", new { id = item.Id })
-                }
-
-                @if (User.IsInRole("Submitter"))
-                {
-                    @Html.ActionLink("Create Ticket", "Create", "Tickets", new { projectId = item.Id }, null)
-                }
-
-
-
-            </td>
-            </tr>
+            <div class="row">
+                <div class="col mt-3">
+                    <p>
+                        <button class="btn btn-sm bg-gradient-navy">@Html.ActionLink("Create New Project", "Create", null, new { @class = "text-white" })</button>
+                    </p>
+                </div>
+            </div>
         }
-    </tbody>
-</table>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="mx-3 mt-n2 elevation-2 bg-gradient-orange text-white">
+                        <h5 class="mx-3 mt-2 mb-0">All Projects</h5>
+                        <p class="text-sm mx-sm-4">All Projects in the Database</p>
+                    </div>
+                    <!-- /.card-header -->
+                    <div class="card-body">
+                        <table class="table table-valign-middle border-bottom">
+                            <thead class="table-head-fixed">
+                                <tr>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.Name)
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.Description)
+                                    </th>
+                                    @*<th>
+                                            @Html.DisplayName("Project Manager")
+                                        </th>
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.Created)
+                                        </th>
+                                        <th>
+                                            @Html.DisplayNameFor(model => model.Updated)
+                                        </th>*@
+                                    @*<th>
+                                            @Html.DisplayNameFor(model => model.IsArchived)
+                                        </th>*@
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @{
+                                    var db = new ApplicationDbContext();
+                                }
 
+                                @foreach (var item in Model)
+                                {
+                                    <tr>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Name)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.Description)
+                                        </td>
+                                        @*<td>
+                                                @{
+                                                    var pm = db.Users.Find(item.ManagerId);
+                                                    var pmName = pm != null ? pm.FullName : "Unassigned";
+                                                }
 
+                                                @pmName
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.Created)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.Updated)
+                                            </td>*@
+                                        @*<td>
+                                                @Html.DisplayFor(modelItem => item.IsArchived)
+                                            </td>*@
+                                        <td>
+                                            @if (User.IsInRole("Admin") || User.IsInRole("Manager"))
+                                            {
+                                                <nav>
+                                                    <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+                                                        <li class=" nav-item has-treeview">
+                                                            <a href="#" class="nav-link">
+                                                                <p>
+                                                                    More Options
+                                                                    <i class="fas fa-angle-down"></i>
+                                                                </p>
+                                                            </a>
+                                                            <ul class="nav nav-treeview">
+                                                                <li class="nav-item">
+                                                                    @Html.ActionLink("Manage Members", "ManageProjectAssignments", new { id = item.Id }, new { @class = "nav-link" })
+                                                                </li>
+                                                                <li class="nav-item">
+                                                                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "nav-link" })
+                                                                </li>
+                                                                <li class="nav-item">
+                                                                    @Html.ActionLink("Project Details", "ProjectDetails", new { id = item.Id }, new { @class = "nav-link" })
+                                                                </li>
+
+                                                            </ul>
+                                                        </li>
+                                                        @*@Html.ActionLink("Assign Users |", "AssignUsers", new { projectId = item.Id })*@
+                                                    </ul>
+                                                </nav>
+                                            }
+
+                                            @if (User.IsInRole("Submitter"))
+                                            {
+                                                <nav>
+                                                    <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+                                                        <li class="nav-item">
+                                                            @Html.ActionLink("Create Ticket", "Create", "Tickets", new { id = item.Id }, new { @class = "nav-link" })
+                                                        </li>
+                                                    </ul>
+                                                </nav>
+                                            }
+                                        </td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
