update to files
bug fixes, notificaiton emails are now being sent to designated users, working on getting charts to display data appropriate to logged in users, still working on issue with assigning/unassigning users to/from projects - pm still has too much authority

--- a/Wray_Tracker/Views/Shared/_SideNav.cshtml
+++ b/Wray_Tracker/Views/Shared/_SideNav.cshtml
@@ -124,7 +124,7 @@
                 <!-- Tickets dropdown nav list -->
                 <li class="nav-item has-treeview">
                     <a href="#" class="nav-link">
-                        <i class="nav-icon fas fa-chart-pie"></i>
+                        <i class="nav-icon fas fa-ticket-alt"></i>
                         <p>
                             Tickets
                             <i class="right fas fa-angle-left"></i>
